--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="top-container">
             <h2>Metric/Imperial Unit Conversion</h2>
             <div class="number">
-                <input id="input-el" type="text" placeholder="0">
+                <input id="input-el" type="number" placeholder="0">
             </div>
             <button id="convert-btn">Convert</button>
         </div>
